Fix draw tools display issue with overlapping divs.

--- a/app/assets/stylesheets/essence_methods.scss
+++ b/app/assets/stylesheets/essence_methods.scss
@@ -30,7 +30,7 @@
 
 .draw_tool_category_div {
 	float: left;
-	height: 100%;
+	height: 90%;
 	width: 28%;
 	margin: 1px;
 
@@ -46,7 +46,7 @@
 .draw_tool_operation_div {
 	height: 8%;
 	width: 80%;
-	margin-top: 8px;
+	margin-top: 2px;
 	margin-left: 8px;
 	border: 1px solid purple;
 
